# mylittlepony

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg
mylittlepony/: __init__.py  client.py  db.sqlite  ponydb.sqlite  schema.prisma
mylittlepony/prisma/: builder.py  client.py  enums.py  fields.py  models.py  types.py
mylittlepony/prisma/engine/: http.py
src/mylittlepony/: __init__.py  db.sqlite  schema.prisma
src/mylittlepony/prisma/: actions.py  builder.py  client.py  models.py  partials.py  types.py
src/mylittlepony/prisma/engine/: abstract.py  query.py
