[metadata]
name = mylittlepony
version = 0.0.1
author = zeffo
author_email = phatakaman@gmail.com
description = A thin wrapper for datamined content from My Little Pony, powered by Prisma
url = https://github.com/zeffo/mylittlepony
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src